<?xml version="1.0"?>
<package format="2">
  <name>emergency_braking_system</name>
  <version>0.0.0</version>
  <description>Emergency Braking System</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
</package>
